<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/expx"
        android:scaleType="centerCrop"
        android:id="@+id/backgroundpx"/>


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/header"
    android:id="@+id/title"
    android:layout_marginBottom="99dp"
    android:layout_alignParentBottom="true"
    android:layout_alignParentRight="true"/>

    <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/playerName"
    android:hint="@string/playerName"
    android:layout_marginBottom="49dp"
    android:layout_alignParentBottom="true"
    android:imeOptions="actionDone"/>

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/startButton"
    android:onClick="Q1"
    android:text="@string/startButton"
    android:layout_alignParentBottom="true"
    />

</RelativeLayout>